* added test that verifies for ErrantRecordReporter call